examples/invalid/type4.cp
type ints is array[5] integer;